--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build; git add build; git commit -m 'deploy'; git subtree push --force --prefix build origin gh-pages"
   },
   "eslintConfig": {
     "extends": "react-app"
